UV VIEWER: No update with color space change #32896

Closed
opened 2012-10-16 19:56:03 +02:00 by Troy Sobotka · 5 comments

%%%Changing a color space in the UV Viewer does not trigger an update on the view.%%%

%%%Changing a color space in the UV Viewer does not trigger an update on the view.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Works fine for me, open .png image in the image editor, change color space from sRGB to something else, colors change (except for Non-Color and Raw, which I believe is intentional).%%%

%%%Works fine for me, open .png image in the image editor, change color space from sRGB to something else, colors change (except for Non-Color and Raw, which I believe is intentional).%%%
Author

%%%Apologies. I was in a tad of a hustle. Let's see if I can get the due diligence in:

Architecture: amd64
Platform: Linux 64 (Debian Wheezy)

Summary: When changing a color space on an image and viewing the output from a node setup using a Viewer Node, the image does not trigger an appropriate update event.

Steps to reproduce:

  1. Open an image in the compositor and route it to a viewer node.
  2. View the output of the Viewer node in an adjacent UV Image pane.
  3. Add a second UV Image pane and select the original source image.
  4. Change the color space of the source image. Note how the viewer node does not trigger an update event and will instead require a relinking of a node join or like event to trigger the update.

Apologies...%%%

%%%Apologies. I was in a tad of a hustle. Let's see if I can get the due diligence in: Architecture: amd64 Platform: Linux 64 (Debian Wheezy) Summary: When changing a color space on an image and viewing the output from a node setup using a Viewer Node, the image does not trigger an appropriate update event. Steps to reproduce: 1) Open an image in the compositor and route it to a viewer node. 2) View the output of the Viewer node in an adjacent UV Image pane. 3) Add a second UV Image pane and select the original source image. 4) Change the color space of the source image. Note how the viewer node does not trigger an update event and will instead require a relinking of a node join or like event to trigger the update. Apologies...%%%

%%%Fixed in svn rev51397. Thanks for the report, closing.%%%

%%%Fixed in svn rev51397. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#32896
No description provided.