Fix #32896: No compositor tree update with image input color space change